[DevTools] Respond with a close frame

WS spec section 5.5.1:

If an endpoint receives a Close frame and did not previously send a
Close frame, the endpoint MUST send a Close frame in response.  (When
sending a Close frame in response, the endpoint typically echos the
status code it received.)  It SHOULD do so as soon as practical.  An
endpoint MAY delay sending a Close frame until its current message is
sent (for instance, if the majority of a fragmented message is
already sent, an endpoint MAY send the remaining fragments before
sending a Close frame).  However, there is no guarantee that the
endpoint that has already sent a Close frame will continue to process
data.

After both sending and receiving a Close message, an endpoint
considers the WebSocket connection closed and MUST close the
underlying TCP connection.  The server MUST close the underlying TCP
connection immediately; the client SHOULD wait for the server to
close the connection but MAY close the connection at any time after
sending and receiving a Close message, e.g., if it has not received a
TCP Close from the server in a reasonable time period.

BUG=718619

Review-Url: https://codereview.chromium.org/2871573011
Cr-Commit-Position: refs/heads/master@{#470649}